--- a/main.html
+++ b/main.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Mini App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, Telegram!</h1>
-    <button id="sendData">Send Data</button>
-    <script>
-        const tg = window.Telegram.WebApp;
-        tg.expand(); // Развернуть приложение на весь экран
-
-        document.getElementById('sendData').addEventListener('click', () => {
-            tg.sendData(JSON.stringify({ message: 'Hello from Mini App!' }));
-        });
-    </script>
+    <div class="container">
+        <h1>Welcome to Mini App!</h1>
+        <div id="user-info">
+            <p>Loading user data...</p>
+        </div>
+        <button id="send-data">Send Message to Telegram</button>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
