--- a/main.html
+++ b/main.html
@@ -15,5 +15,6 @@
         <button id="send-data">Send Message to Telegram</button>
     </div>
     <script src="app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
